---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2021-10-20
  Changes:
    - Added depot priority as a managed signal / field.
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2021-08-23
  Bugfixes:
    - Fix for multi-player entity overwrite - Thanks Blackclaws
    - Eliminated crash when player joins while other player has LTNC open.
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2021-08-08
  Changes:
    - Update to work with changes in flib 0.8.0+.  Thanks raiguard for the PR!
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2021-06-06
  Bugfixes:
    - Crash when adding / editing virtual signals.
    - Crash when opening fast-replaced combinator when original, regular combinator had more than 14 non-LTN signals.
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021-05-23
  Features:
    - Now able to specify requests as number of stacks.
    - Per-player setting to enable stack based requests (default)
    - Per-player setting to adjust the upper bound of the request slider
  Changes:
    - Can now right click in the text fields to clear the existing value
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2021-05-14
  Bugfixes:
    - Crash on load if loading save where LTN Combi has not previously been created.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2021-05-14
  Bugfixes:
    - Crash on double confirm.
    - Crash when loading game with UI already open in save.